force-app/main/default/objects/Deal_Registration__c/fields/Queue_Mailbox__c.field-meta.xml
<CustomField>
    <fullName>Queue_Mailbox__c</fullName>
    <label>Queue Mailbox</label>
    <type>Email</type>
</CustomField>