force-app/main/default/objects/Deal_Registration__c/fields/Sales_Leader_Reminder_Counter__c.field-meta.xml
<CustomField>
    <fullName>Sales_Leader_Reminder_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field counts how many times an mail sent to the sales leader for the deal approval.</description>
    <label>Sales Leader Reminder Counter</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>