force-app/main/default/objects/Deal_Registration__c/fields/Sales_Leader_Reminder_date_time__c.field-meta.xml
<CustomField>
    <fullName>Sales_Leader_Reminder_date_time__c</fullName>
    <description>This field contains the date and time which sends a reminder to sales leader for approval.</description>
    <label>Sales Leader Reminder date &amp; time</label>
    <type>DateTime</type>
</CustomField>