force-app/main/default/objects/Deal_Registration__c/fields/Sales_Operation_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Operation_Approver_Name__c</fullName>
    <formula>IF( Partner_Industry__c== &quot;Financial&quot;, &quot;Banking Sales Operations&quot;, IF(Partner_Industry__c== &quot;Hospitality&quot;, &quot;Hospitality Sales Operations&quot;, IF(Partner_Industry__c== &quot;Retail&quot;, &quot;Retail Sales Operations&quot;, &quot;Michael Kozel&quot; )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Operation Approver Name</label>
    <type>Text</type>
</CustomField>