force-app/main/default/objects/Deal_Registration__c/fields/Sales_Operation_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Sales_Operation_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Operation Reminder</label>
    <type>Checkbox</type>
</CustomField>