force-app/main/default/objects/Deal_Registration__c/fields/Sales_Opp_Approver__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opp_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field populate when the request is submitted for the approval.</description>
    <label>Sales Opp Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Registrations4</relationshipName>
    <type>Lookup</type>
</CustomField>