force-app/main/default/objects/Deal_Registration__c/fields/Sales_Project_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Project_Milestone_Date__c</fullName>
    <label>Sales Project Milestone Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>