force-app/main/default/objects/Deal_Registration__c/fields/Special_Bid_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Special_Bid_Registration_Type__c</fullName>
    <label>Deal Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net New Customer</fullName>
            </value>
            <value>
                <fullName>Existing Partner Account Customer</fullName>
            </value>
            <value>
                <fullName>Existing NCR Customer</fullName>
            </value>
            <value>
                <fullName>Existing customer of another Partner</fullName>
            </value>
            <value>
                <fullName>Competitive Program</fullName>
                <isActive>false</isActive>
                <label>Competitive Program</label>
            </value>
            <value>
                <fullName>DN Competitive Program</fullName>
                <isActive>false</isActive>
                <label>DN Competitive Program</label>
            </value>
            <value>
                <fullName>FIN Competitive Deal Registration</fullName>
                <isActive>false</isActive>
                <label>FIN Competitive Deal Registration</label>
            </value>
            <value>
                <fullName>New Request</fullName>
                <isActive>false</isActive>
                <label>New Request</label>
            </value>
            <value>
                <fullName>Update previously approved Deal Registration</fullName>
                <isActive>false</isActive>
                <label>Update previously approved Deal Registration</label>
            </value>
            <value>
                <fullName>Welcome Diebold - 2018</fullName>
                <isActive>false</isActive>
                <label>Welcome Diebold - 2018</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>