force-app/main/default/objects/Deal_Registration__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State of End Customer</description>
    <label>State / Province / Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>