force-app/main/default/objects/Deal_Registration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of Deal Registration Request.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <color>#F3D904</color>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <color>#FF6600</color>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <color>#33CC00</color>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <color>#FF0000</color>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Converted to an Opportunity</fullName>
                <color>#419249</color>
                <label>Converted to an Opportunity</label>
            </value>
            <value>
                <fullName>Closed Booked</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Partner Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>