force-app/main/default/objects/Deal_Registration__c/fields/Step_Elapsed_Time_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Step_Elapsed_Time_In_Days__c</fullName>
    <description>The total time in days since this approval step was started.</description>
    <inlineHelpText>The total time in days since this approval step was started.</inlineHelpText>
    <label>Step Elapsed Time In Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>