force-app/main/default/objects/Deal_Registration__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>Street Address of end customer.</description>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>