force-app/main/default/objects/Deal_Registration__c/fields/Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>Swift_Code__c</fullName>
    <inlineHelpText>Financial Services only</inlineHelpText>
    <label>Swift Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>