force-app/main/default/objects/Deal_Registration__c/fields/TAM__c.field-meta.xml
<CustomField>
    <fullName>TAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>