force-app/main/default/objects/Deal_Registration__c/fields/Title_End_Customer__c.field-meta.xml
<CustomField>
    <fullName>Title_End_Customer__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>