force-app/main/default/objects/Deal_Registration__c/fields/Title_Partner__c.field-meta.xml
<CustomField>
    <fullName>Title_Partner__c</fullName>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>