force-app/main/default/objects/Deal_Registration__c/fields/Top_Strategic_Initiatives_of_customer__c.field-meta.xml
<CustomField>
    <fullName>Top_Strategic_Initiatives_of_customer__c</fullName>
    <label>Top Strategic Initiatives of customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>