force-app/main/default/objects/Deal_Registration__c/fields/Total_number_of_actual_ATMs_deployed__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_actual_ATMs_deployed__c</fullName>
    <label>Total number of actual ATMs deployed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>