force-app/main/default/objects/Deal_Registration__c/fields/VisualTemplate__c.field-meta.xml
<CustomField>
    <fullName>VisualTemplate__c</fullName>
    <label>VisualTemplate</label>
    <type>TextArea</type>
</CustomField>