force-app/main/default/objects/Deal_Registration__c/validationRules/Close_date_cannot_be_in_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_date_cannot_be_in_past</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; Estimated_Close_Date__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Estimated_Close_Date__c</errorDisplayField>
    <errorMessage>Estimated Close Date cannot be in Past</errorMessage>
</ValidationRule>