force-app/main/default/objects/Deal_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal_Name__c</columns>
    <columns>Partner_Company_Name__c</columns>
    <columns>End_Customer_Company_Name__c</columns>
    <columns>Projected_Opportunity_Value__c</columns>
    <columns>Partner_Industry__c</columns>
    <columns>Region__c</columns>
    <columns>Approval_Date__c</columns>
    <columns>Special_Bid_Registration_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Converted to an Opportunity</value>
    </filters>
    <label>All</label>
</ListView>