force-app/main/default/objects/Deal_Registration__c/listViews/Channel_Operation_Deal_Registration_Deal_Registration.listView-meta.xml
<ListView>
    <fullName>Channel_Operation_Deal_Registration_Deal_Registration</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <filterScope>Queue</filterScope>
    <label>Channel Operation - Deal Registration</label>
    <queue>Channel_Operation_Deal_Registration</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>