force-app/main/default/objects/Deal_Registration__c/listViews/Deal_Registration_Retail_MGR_Approvers_Deal_Registration.listView-meta.xml
<ListView>
    <fullName>Deal_Registration_Retail_MGR_Approvers_Deal_Registration</fullName>
    <filterScope>Queue</filterScope>
    <label>Deal Registration Retail MGR Approvers</label>
    <queue>Deal_Registration_Retail_MGR_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>